Opened 12 years ago

Closed 12 years ago

#3425 closed defect (fixed)

h264/flv decoding regression

Reported by: Dee Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: flv h264 regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Hi,
I am trying to transcode attached flv file (dunaya.flv) to mpegts but the resultant file is not playable in vlc or in any other player. Original file plays fine in vlc. Ffmpeg log (output of -report) is also attached.

dunya.flv can also be downloaded form the following link:
http://www10.zippyshare.com/v/92903604/file.html

I am using ffmpeg-20140225-git-a8ad7e4-win32-static with following command line:
ffmpeg.exe -report -y -i dunya.flv dunya.ts

I see following messages in the log:
[flv @ 003a69e0] Format flv probed with size=2048 and score=100
[flv @ 003a69e0] Before avformat_find_stream_info() pos: 13 bytes read:32768 seeks:0
[h264 @ 003a7fa0] no picture
..
[flv @ 003a69e0] Non-increasing DTS in stream 0: packet 2 with DTS 0, packet 3 with DTS 0
(similar message repeated many times)
..
[mpegts @ 047f1020] Delay between the first packet and last packet in the muxing queue is 10040000 > 10000000: forcing output.
(similar message repeated many times)
..
* drop!
(similar message repeated many times)
..

older ffmpeg versions produce similar result.

Any idea whats wrong here?

Thank you,
Dee

Attachments (2)

dunya.flv (1.3 MB ) - added by Dee 12 years ago.
sample file to reproduce the issue
ffmpeg-20140225-182838.zip (38.3 KB ) - added by Dee 12 years ago.
log file

Download all attachments as: .zip

Change History (8)

by Dee, 12 years ago

Attachment: dunya.flv added

sample file to reproduce the issue

by Dee, 12 years ago

Attachment: ffmpeg-20140225-182838.zip added

log file

comment:1 by Carl Eugen Hoyos, 12 years ago

Keywords: regression added; mpegts transcode removed
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Summary: Problem in transcoding to mpegts, h264 decode fail?h264/flv decoding regression

For future tickets: Please do not compress the log output, instead post it directly in the ticket, it is important that it can be easily read.

From a user's perspective, this is a regression since 0ff4f0c0

$ ffmpeg -i ../Samples/tickets/ticket3425/dunya.flv -qscale 2 out.avi
ffmpeg version N-60950-gfbf9837 Copyright (c) 2000-2014 the FFmpeg developers
  built on Feb 28 2014 00:33:00 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 66.100 / 52. 66.100
  libavcodec     55. 52.102 / 55. 52.102
  libavformat    55. 33.100 / 55. 33.100
  libavdevice    55. 10.100 / 55. 10.100
  libavfilter     4.  2.100 /  4.  2.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
Input #0, flv, from '../Samples/tickets/ticket3425/dunya.flv':
  Metadata:
    author          : tanzeem
    copyright       : dunyatv
    description     :
    keywords        :
    rating          :
    title           : dunyatv
    presetname      : Custom
    creationdate    : Wed Jan 29 19:25:20 2014
                    :
    videodevice     : Osprey-210 Video Device 1
    avclevel        : 30
    avcprofile      : 77
    videokeyframe_frequency: 7
    audiodevice     : Osprey-210 Audio Device 1
    audiochannels   : 1
    audioinputvolume: 0
  Duration: 00:00:37.60, start: 0.000000, bitrate: 289 kb/s
    Stream #0:0: Video: h264 (Main), yuv420p(tv), 480x360 [SAR 1:1 DAR 4:3], 235 kb/s, 25 fps, 25 tbr, 1k tbn, 50 tbc
    Stream #0:1: Audio: mp3, 22050 Hz, mono, s16p, 32 kb/s
Please use -q:a or -q:v, -qscale is ambiguous
Output #0, avi, to 'out.avi':
  Metadata:
    author          : tanzeem
    ICOP            : dunyatv
    description     :
    keywords        :
    rating          :
    INAM            : dunyatv
    presetname      : Custom
    creationdate    : Wed Jan 29 19:25:20 2014
                    :
    videodevice     : Osprey-210 Video Device 1
    avclevel        : 30
    avcprofile      : 77
    videokeyframe_frequency: 7
    audiodevice     : Osprey-210 Audio Device 1
    audiochannels   : 1
    audioinputvolume: 0
    ISFT            : Lavf55.33.100
    Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 480x360 [SAR 1:1 DAR 4:3], q=2-31, 200 kb/s, 25 tbn, 25 tbc
    Stream #0:1: Audio: ac3 ([0] [0][0] / 0x2000), 22050 Hz, mono, fltp, 96 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (h264 -> mpeg4)
  Stream #0:1 -> #0:1 (mp3 -> ac3)
Press [q] to stop, [?] for help
[avi @ 0x26c2740] Too large number of skipped frames 79773 > 60000
av_interleaved_write_frame(): Invalid argument
[avi @ 0x26c2740] Too large number of skipped frames 80100 > 60000
frame=    3 fps=0.0 q=2.0 Lsize=     125kB time=00:53:24.08 bitrate=   0.3kbits/s dup=0 drop=226
video:152kB audio:75kB subtitle:0 data:0 global headers:0kB muxing overhead -45.057991%

The input sample contains ~1000 frames.

comment:2 by Dee, 12 years ago

Hi,
Thank you! for looking into this issue. Is any workaround possible?

BR,
Dee

comment:3 by Carl Eugen Hoyos, 12 years ago

Did you test reverting the offending commit?

comment:4 by Dee, 12 years ago

Sorry no, I have only been using Zeranoe FFmpeg builds.

in reply to:  3 comment:5 by Carl Eugen Hoyos, 12 years ago

Replying to cehoyos:

Did you test reverting the offending commit?

Sorry, I don't think this commit can be easily reverted.

comment:6 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.