Read bits_per_coded_sample from V_MS/VFW/FOURCC mkv files.

Fixes ticket #3425.